--- a/expression2/Makefile
+++ b/expression2/Makefile
@@ -13,7 +13,7 @@ calc3:
 	@mkdir -p $(ODIR)
 	@$(YACC) -db $(ODIR)/calc3 $(SRC)/calc3.y
 	@$(LEX) -o $(ODIR)/calc3.c $(SRC)/calc3.l
-	@$(CC) $(CFLAGS) $(LIBS) -o $(ODIR)/calc3a $(ODIR)/calc3.c $(SRC)/calc3a.c $(ODIR)/calc3.tab.c
+	@$(CC) $(CFLAGS) $(LIBS) -o $(ODIR)/calc3a $(ODIR)/calc3.c $(ODIR)/calc3.tab.c
 
 clean:
 	@echo 'Removing all binaries'
