makefile  yacc -v 產生y.output

--- a/expression2/Makefile
+++ b/expression2/Makefile
@@ -11,7 +11,7 @@ LIBS=
 calc3:
 	@echo 'Building example 3: $@'
 	@mkdir -p $(ODIR)
-	@$(YACC) -db $(ODIR)/calc3 $(SRC)/calc3.y
+	@$(YACC) -v -db $(ODIR)/calc3 $(SRC)/calc3.y
 	@$(LEX) -o $(ODIR)/calc3.c $(SRC)/calc3.l
 	@$(CC) $(CFLAGS) $(LIBS) -o $(ODIR)/calc3a $(ODIR)/calc3.c $(ODIR)/calc3.tab.c
 
