--- a/expression2/Makefile
+++ b/expression2/Makefile
@@ -1,5 +1,5 @@
 # Tool invocations
-CC=cc
+CC=gcc
 YACC=yacc
 LEX=lex
 SRC=src
@@ -8,29 +8,22 @@ ODIR=output
 CFLAGS=-I$(SRC) -I$(ODIR)
 LIBS=
 
-calc3:
+package: calc.o
 	@echo 'Building: $@'
-	@mkdir -p $(ODIR)
-	@$(YACC) -v -db $(ODIR)/calc3 $(SRC)/calc3.y
-	@$(LEX) -o $(ODIR)/calc3.c $(SRC)/calc3.l
-	@$(CC) $(CFLAGS) $(LIBS) -o $(ODIR)/calc3 $(ODIR)/calc3.c $(ODIR)/calc3.tab.c
+	@ar -rcs $(ODIR)/libcalc.a $(ODIR)/calc.o $(ODIR)/calc.tab.o
 
-calc:
+calc.o:
 	@echo 'Building: $@'
 	@mkdir -p $(ODIR)
 	@$(YACC) -v -db $(ODIR)/calc $(SRC)/calc.y
 	@$(LEX) -o $(ODIR)/calc.c $(SRC)/calc.l
-	@$(CC) $(CFLAGS) $(LIBS) -c -o $(ODIR)/calc.o $(ODIR)/calc.c
-	@$(CC) $(CFLAGS) $(LIBS) -c -o $(ODIR)/calc.tab.o $(ODIR)/calc.tab.c
+	@$(CC) $(ODIR)/calc.tab.c $(CFLAGS) $(LIBS) -c -o $(ODIR)/calc.tab.o
+	@$(CC) $(ODIR)/calc.c $(CFLAGS) $(LIBS) -c -o $(ODIR)/calc.o
 
-package: calc
+main.exe: calc.o package
 	@echo 'Building: $@'
-	@ar -rcs $(ODIR)/libcalc.a $(ODIR)/calc.o $(ODIR)/calc.tab.o
-
-main: calc package
-	@echo 'Building: $@'
-	@$(CC) $(CFLAGS) $(LIBS) -o $(ODIR)/calc $(SRC)/main.c $(ODIR)/libcalc.a
+	@$(CC) $(SRC)/main.c $(CFLAGS) $(LIBS) -o $(ODIR)/main.exe $(ODIR)/libcalc.a
 
 clean:
 	@echo 'Removing all binaries'
-	@rm -rf $(ODIR)/
+	@rm -r $(ODIR)/*
