正式命名 CED (C Event Dispatcher) -修改檔名為CED -修改main為test -改"ex"資料夾為"example"
關於傳遞參數至expr中
eval1中的參數改為arg1
且加入定義於calc.l中
(原使用*value，使用指標會有問題，且value名稱已被使用)

--- a/src/expression/Makefile
+++ b/src/expression/Makefile
@@ -8,7 +8,7 @@ ODIR=output
 CFLAGS=-I$(SRC) -I$(ODIR)
 LIBS=
 
-package: calc.o
+libcalc.a: calc.o
 	@echo 'Building: $@'
 	@ar -rcs $(ODIR)/libcalc.a $(ODIR)/calc.o $(ODIR)/calc.tab.o
 
@@ -20,9 +20,9 @@ calc.o:
 	@$(CC) $(ODIR)/calc.tab.c $(CFLAGS) $(LIBS) -c -o $(ODIR)/calc.tab.o
 	@$(CC) $(ODIR)/calc.c $(CFLAGS) $(LIBS) -c -o $(ODIR)/calc.o
 
-main.exe: calc.o package
+example: calc.o libcalc.a
 	@echo 'Building: $@'
-	@$(CC) $(SRC)/main.c $(ODIR)/libcalc.a $(CFLAGS) $(LIBS) -o $(ODIR)/main.exe
+	@$(CC) $(SRC)/example.c $(ODIR)/libcalc.a $(CFLAGS) $(LIBS) -o $(ODIR)/example.exe
 
 clean:
 	@echo 'Removing all binaries'
