移除libcalc.a (僅expression內object file) 改成libCED.a(包入CED.o)

--- a/src/expression/Makefile
+++ b/src/expression/Makefile
@@ -8,10 +8,6 @@ ODIR=output
 CFLAGS=-I$(SRC) -I$(ODIR)
 LIBS=
 
-libcalc.a: calc.o
-	@echo 'Building: $@'
-	@ar -rcs $(ODIR)/libcalc.a $(ODIR)/calc.o $(ODIR)/calc.tab.o
-
 calc.o:
 	@echo 'Building: $@'
 	@mkdir -p $(ODIR)
@@ -20,9 +16,14 @@ calc.o:
 	@$(CC) $(ODIR)/calc.tab.c $(CFLAGS) $(LIBS) -c -o $(ODIR)/calc.tab.o
 	@$(CC) $(ODIR)/calc.c $(CFLAGS) $(LIBS) -c -o $(ODIR)/calc.o
 
-example: calc.o libcalc.a
+example: calc.o
 	@echo 'Building: $@'
-	@$(CC) $(SRC)/example.c $(ODIR)/libcalc.a $(CFLAGS) $(LIBS) -o $(ODIR)/example.exe
+	@$(CC) $(SRC)/example.c $(ODIR)/calc.o $(ODIR)/calc.tab.o $(CFLAGS) $(LIBS) -o $(ODIR)/example.exe
+
+#(abuse)no need to package at here
+libcalc.a: calc.o
+	@echo 'Building: $@'
+	@ar -rcs $(ODIR)/libcalc.a $(ODIR)/calc.o $(ODIR)/calc.tab.o
 
 clean:
 	@echo 'Removing all binaries'
