--- a/.gitignore
+++ b/.gitignore
@@ -10,10 +10,10 @@
 *.executable
 a.out
 
-# # 不追蹤目標程式碼檔案
-# *.o
-# *.obj
-# *.object_code
+# 不追蹤目標程式碼檔案
+*.o
+*.obj
+*.object_code
 
 # 不追蹤隱藏檔
 .*
@@ -25,3 +25,10 @@ a.out
 *.lex.c
 *.tab.c
 *.tab.h
+
+# 舊檔
+CED_org.h
+ref
+
+# output file
+output
